# gym-saturation

./: .dockerignore  .flake8  .gitignore  .pre-commit-config.yaml  .pylintrc  .readthedocs.yaml  CODE_OF_CONDUCT.rst  CONTRIBUTING.rst  Dockerfile  README.md  README.rst  codemeta.json  local-build.sh  mypy.ini  pyproject.toml  pytest.ini  show_report.sh  spelling.dict
.circleci/: config.yml
doc/: basic-usage.rst  code-of-conduct.rst  conf.py  development-guide.rst  example.org  example.py  example.rst  index.rst  requirements.txt
doc/api/: environments.rst  utils.rst  wrappers.rst
doc/auto_examples/: index.rst  plot_age_agent.ipynb  plot_age_agent.py  plot_age_agent.rst  sg_execution_times.rst
doc/environments/: iprover-env.rst  saturation-env.rst  vampire-env.rst
doc/source/: basic-usage.rst  conf.py  experiments.rst  how-to-contribute.rst  index.rst  package-documentation.rst  testing-a-policy.rst  testing-an-agent.rst  what-is-going-on.rst
doc/source/api/: environments.rst  wrappers.rst
doc/source/environments/: iprover-env.rst  saturation-env.rst  vampire-env.rst  vampire.rst
doc/source/tutorials/: experiments.rst
doc/tutorials/: experiments.rst
examples/: README.rst  example.ipynb  extended-example.ipynb  little-example.ipynb  plot_age_agent.py
examples/multi-armed-bandit/: thompson_sampling.py
examples/ppo/: curriculum_learning.py  parametric_actions_vampire.py  requirements.txt
experiments/multi-armed-bandit/: requirements.txt  thompson_sampling.py
experiments/ppo/: parametric_actions_vampire.py  requirements.txt
gym_saturation/: __init__.py  agent_testing.py  clause_space.py  conftest.py  constants.py  dummy_http_handler.py  grammar.py  policy_testing.py  proof_state.py  relay_server.py  utils.py  vampire_wrapper.py
gym_saturation/envs/: __init__.py  dummy_saturation_env.py  iprover_env.py  saturation_env.py  vampair_env.py  vampire_env.py
gym_saturation/logic_ops/: __init__.py  factoring.py  paramodulation.py  reflexivity_resolution.py  resolution.py  substitution.py  unification.py  utils.py
gym_saturation/parsing/: __init__.py  cnf_parser.py  json_grammar.py  tptp_parser.py
gym_saturation/resources/: TPTP.bnf  TPTP.lark  vampire-mock
gym_saturation/resources/TPTP-mock/Axioms/: SET001-0.ax  TST001-0.ax
gym_saturation/resources/TPTP-mock/Problems/SET/: SET001-1.p
gym_saturation/resources/TPTP-mock/Problems/TST/: TST001-1.p  TST002-1.p  TST003-1.p  TST004-1.p
gym_saturation/wrappers/: __init__.py  age_weight_bandit.py  ast2vec_wrapper.py  clause_embeddings_wrapper.py  constant_parametric_actions.py  duplicate_key_obs.py  fake_box_observation.py  labels_extractor.py  llm_wrapper.py  llmwrapper.py  md2d_wrapper.py  parametric_actions_wrapper.py  useful_actions_wrapper.py
joss-paper/: architecture.drawio  paper.bib  paper.md  paper.tex
scripts/: check_doc.py  run_profiler.py
slurm-jobs/: filename_getter.py  test_agent.sbatch
tableaux2023-paper/: gym-saturation.bib  gym-saturation.tex  mean-reward.eps
testing_docker/: .dockerignore  Dockerfile
