[tool.poetry]
name = "gym-saturation"
version = "0.12.4"
description = "Gymnasium environments for saturation provers"
authors = ["Boris Shminke <boris@shminke.com>"]
license = "Apache-2.0"
repository = "https://github.com/inpefess/gym-saturation"
readme = "README.rst"
classifiers=[
	"Programming Language :: Python :: 3.9",
	"Programming Language :: Python :: 3.10",
	"Programming Language :: Python :: 3.11",
        "Programming Language :: Python :: 3.12",
        "Programming Language :: Python :: 3.13",
	"License :: OSI Approved :: Apache Software License",
	"Operating System :: OS Independent",
	"Intended Audience :: Science/Research",
	"Development Status :: 3 - Alpha",
	"Environment :: Console",
	"Natural Language :: English",
	"Topic :: Scientific/Engineering :: Artificial Intelligence",
	"Typing :: Typed"
]
include = ["gym_saturation/py.typed"]
keywords = ["saturation prover", "OpenAI Gym", "Gymnasium", "automated theorem prover"]

[tool.poetry.dependencies]
python = ">= 3.9.0, < 3.14"
pexpect = "*"
gymnasium = "*"
numpy = "*"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
black = "*"
mypy = "*"
pylint = "*"
pre-commit = "*"
pydocstyle = "*"
tbump = "*"
pyenchant = "*"
flake8 = "*"
toml = "*"
jedi = "*"
bandit = {version = "*", extras = ["toml"]}
pyupgrade = "*"
pyroma = "*"

[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
coverage = "*"
pytest = "*"

[tool.poetry.group.doc]
optional = true

[tool.poetry.group.doc.dependencies]
types-dataclasses = "*"
sphinx-autodoc-typehints = "*"
furo = "*"
sphinx-gallery = "*"
nest-asyncio = "*"

[tool.black]
line-length=79

[tool.isort]
profile = "black"
src_paths = ["gym_saturation"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--doctest-modules --junit-xml test-results/gym-saturation.xml"
testpaths = ["gym_saturation"]
doctest_optionflags = "NORMALIZE_WHITESPACE ELLIPSIS"

[tool.pylint.MASTER]
load-plugins = [
    "pylint.extensions.docparams",
    "pylint.extensions.mccabe",
    "pylint.extensions.set_membership",
    "pylint.extensions.code_style",
    "pylint.extensions.broad_try_clause",
    "pylint.extensions.comparison_placement",
    "pylint.extensions.dict_init_mutate",
    "pylint.extensions.redefined_loop_name",
    "pylint.extensions.dunder",
    "pylint.extensions.eq_without_hash",
    "pylint.extensions.redefined_variable_type",
    "pylint.extensions.overlapping_exceptions",
    "pylint.extensions.confusing_elif",
]

[tool.pylint.parameter_documentation]
accept-no-param-doc = false
accept-no-raise-doc = false
accept-no-return-doc = false
accept-no-yields-doc = false
default-docstring-type = "sphinx"

[tool.pylint.similarities]
ignore-comments = true
ignore-docstrings = true
ignore-imports = true
ignore-signatures = true
min-similarity-lines = 4

[tool.pylint.format]
ignore-long-lines = "https://"
max-line-length = 79

[tool.pylint.design]
max-statements = 10

[tool.pylint.typecheck]
generated-members = ["asyncio"]

[tool.pylint.spelling]
spelling-dict = "en_GB"
spelling-private-dict-file = "spelling.dict"

[tool.mypy]
show_error_codes = true
incremental = false
disable_error_code = "no-redef"
check_untyped_defs = true

[[tool.mypy.overrides]]
module = ["pexpect", "enchant.*"]
ignore_missing_imports = true

[tool.tox]
env_list = ["py39", "py310", "py311", "py312", "py13"]

[tool.tox.env_run_base]
deps = [
    "coverage",
    "pytest",
    "pydocstyle",
    "pylint",
    "mypy",
    "toml",
    "pyenchant",
    "flake8",
    "pyroma",
    "bandit"
]
commands = [
    ["pydocstyle", "gym_saturation"],
    ["flake8", "gym_saturation"],
    ["pylint", "gym_saturation"],
    ["mypy", "gym_saturation"],
    ["coverage", "run", "-m", "pytest"],
    ["coverage", "xml", "--fail-under=100"],
    ["pyroma", "."],
    ["bandit", "-r", "gym_saturation"]
]

[tool.tbump]
github_url = "https://github.com/inpfess/gym-saturation/"

[tool.tbump.version]
current = "0.12.4"
regex = """
  (?P<major>\\d+)
  \\.
  (?P<minor>\\d+)
  \\.
  (?P<patch>\\d+)
  """

[tool.tbump.git]
message_template = "Bump to {new_version}"
tag_template = "v{new_version}"

[[tool.tbump.file]]
src = "gym_saturation/__init__.py"

[[tool.tbump.file]]
src = "pyproject.toml"

[[tool.tbump.file]]
src = "doc/conf.py"
